--- a/wp-content/themes/bspd/resources/styles/app.css
+++ b/wp-content/themes/bspd/resources/styles/app.css
@@ -7,7 +7,7 @@
 
 @layer base {
   html, body {
-    @apply h-full w-full bg-green-950 text-white lg:text-20 sm:text-18 text-14;
+    @apply h-full w-full bg-green-950 text-white lg:text-20 text-18;
 
     p, ol, ul {
       @apply leading-[1.4] opacity-70;
