--- a/wp-content/themes/bspd/resources/styles/common/header.css
+++ b/wp-content/themes/bspd/resources/styles/common/header.css
@@ -3,10 +3,10 @@
 @tailwind utilities;
 
 .header {
-  @apply absolute left-0 top-0 z-10 w-full overflow-hidden;
+  @apply fixed left-0 top-0 z-10 w-full overflow-hidden transition-colors duration-300;
 
   .header-wrapper {
-    @apply flex justify-between xl:gap-30 gap-20 text-12 font-bold sm:text-[16px] sm:py-30 py-20;
+    @apply flex justify-between xl:gap-30 gap-20 text-12 font-bold sm:text-[16px] sm:py-30 py-20 transition duration-500;
 
     .brand {
       @apply flex items-center gap-10 max-w-[300px];
@@ -17,13 +17,50 @@
     }
 
     .header-nav {
-      @apply flex xl:gap-30 gap-20 items-center max-xlg:fixed max-xlg:h-[100vh] max-xlg:flex-col max-xlg:items-start
+      @apply flex duration-500 overflow-y-scroll xl:gap-30  gap-20 items-center max-xlg:fixed max-xlg:h-[100vh] max-xlg:flex-col max-xlg:items-start
       max-xlg:right-0 max-xlg:top-0 max-xlg:bg-emerald-950 max-xlg:pt-44 max-xlg:pb-40 max-xsm:pb-[120px] max-xlg:px-24
-      max-xlg:justify-between max-xlg:min-w-[255px] text-[16px] xl:text-18;
+      max-xlg:justify-between max-xlg:min-w-[255px] text-[16px] xl:text-18 max-xlg:translate-x-[100%] transition;
 
       .nav-primary ul {
         @apply list-none flex xl:gap-30 gap-20 opacity-100 text-gray-450 max-xlg:flex-col;
+
+        a {
+          @apply transition hover:text-yellow-550;
+        }
       }
     }
+  }
+}
+
+.header.menu-open {
+  .header-overlay {
+    @apply opacity-80 pointer-events-auto touch-auto;
+  }
+
+  .header-nav {
+    @apply max-xlg:translate-x-0;
+  }
+
+  .menu-toggle span:nth-child(1) {
+    @apply opacity-0;
+  }
+
+  .menu-toggle span:nth-child(2) {
+    @apply -rotate-[45deg];
+  }
+
+  .menu-toggle span:nth-child(3) {
+    @apply rotate-[45deg];
+  }
+  .menu-toggle span:nth-child(4) {
+    @apply opacity-0;
+  }
+}
+
+.header.scrolled {
+  @apply bg-emerald-950 shadow;
+
+  .header-wrapper {
+    @apply py-15;
   }
 }
