--- a/wp-content/themes/bspd/resources/styles/common/header.css
+++ b/wp-content/themes/bspd/resources/styles/common/header.css
@@ -6,7 +6,7 @@
   @apply fixed left-0 top-0 z-10 w-full overflow-hidden transition-colors duration-300;
 
   .header-wrapper {
-    @apply flex justify-between xl:gap-30 gap-20 text-12 font-bold sm:text-[16px] sm:py-30 py-20 transition duration-500;
+    @apply flex justify-between xl:gap-30 gap-20 text-12 font-bold sm:text-[16px] sm:py-15 py-10 transition duration-500;
 
     .brand {
       @apply flex items-center gap-10 max-w-[300px];
@@ -19,7 +19,7 @@
     .header-nav {
       @apply flex duration-500 overflow-y-scroll xl:gap-30  gap-20 items-center max-xlg:fixed max-xlg:h-[100vh] max-xlg:flex-col max-xlg:items-start
       max-xlg:right-0 max-xlg:top-0 max-xlg:bg-emerald-950 max-xlg:pt-44 max-xlg:pb-40 max-xsm:pb-[120px] max-xlg:px-24
-      max-xlg:justify-between max-xlg:min-w-[255px] text-[16px] xl:text-18 max-xlg:translate-x-[100%] transition;
+      max-xlg:justify-between max-xlg:min-w-[255px] text-18 xl:text-[16px] max-xlg:translate-x-[100%] transition;
 
       .nav-primary ul {
         @apply list-none flex xl:gap-30 gap-20 opacity-100 text-gray-450 max-xlg:flex-col;
@@ -59,8 +59,4 @@
 
 .header.scrolled {
   @apply bg-emerald-950 shadow;
-
-  .header-wrapper {
-    @apply py-15;
-  }
 }
