--- a/wp-content/themes/bspd/resources/styles/app.css
+++ b/wp-content/themes/bspd/resources/styles/app.css
@@ -10,7 +10,7 @@
 
 @layer base {
   html, body {
-    @apply h-full w-full bg-green-950 text-white lg:text-[16px] text-18;
+    @apply h-full w-full bg-green-950 text-white;
 
     #app {
       @apply flex flex-col justify-between items-stretch min-h-full
