--- a/wp-content/themes/bspd/resources/styles/common/header.css
+++ b/wp-content/themes/bspd/resources/styles/common/header.css
@@ -41,20 +41,13 @@
     @apply max-xlg:translate-x-0;
   }
 
-  .menu-toggle span:nth-child(1) {
+  .menu-toggle .open {
     @apply opacity-0;
   }
-
-  .menu-toggle span:nth-child(2) {
-    @apply -rotate-[45deg];
+  .menu-toggle .close {
+    @apply opacity-100;
   }
 
-  .menu-toggle span:nth-child(3) {
-    @apply rotate-[45deg];
-  }
-  .menu-toggle span:nth-child(4) {
-    @apply opacity-0;
-  }
 }
 
 .header.scrolled {
