Fix header bg after opened popup

--- a/wp-content/themes/bspd/resources/styles/common/header.css
+++ b/wp-content/themes/bspd/resources/styles/common/header.css
@@ -53,3 +53,9 @@
 .header.scrolled {
   @apply bg-emerald-950 shadow;
 }
+
+.body-scrolled {
+  .header {
+    @apply bg-emerald-950 shadow;
+  }
+}
